refs #55663 Added padding to first and bottom row to fix row control visibility

--- a/formbuilderjs/src/sass/components/_row.scss
+++ b/formbuilderjs/src/sass/components/_row.scss
@@ -6,11 +6,17 @@
   transition: background-color 125ms ease-in-out;
   position: relative;
   clear: both;
-  margin-left: 0;
+  margin-left: 1rem;
   margin-bottom: 6px;
   background-color: $white;
   padding: 5px;
   min-height: 34px;
+  &:first-child {
+    margin-top: 1rem;
+  }
+  &:last-child {
+    margin-bottom: 5rem;
+  }
   &:hover {
     box-shadow: 0 0 0 1px $gray-lighter inset;
     .group-actions {
